--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <h1>LISTA DE TAREFAS</h1>
+        <a href="#">Atribuições dos ícones</a>
     </header>
     <main>
 
