--- a/index.html
+++ b/index.html
@@ -5,15 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/header.css">
+    <link rel="stylesheet" href="CSS/main.css">
     <title>Lista de Tarefas</title>
 </head>
 <body>
     <header>
-        <h1>LISTA DE TAREFAS</h1>
+        <div id="cabecalho">
+            <img src="ICONES/lista.png" alt="icone da lista">
+            <h1>LISTA DE TAREFAS</h1>
+        </div>
         <a href="#">Atribuições dos ícones</a>
     </header>
-    <main>
 
+    <main>
+        <button id="adc">+ Nova Tarefa</button>
     </main>
 
     <footer>
