--- a/atribuicoes.html
+++ b/atribuicoes.html
@@ -8,6 +8,8 @@
 <body>
     <ul>
         <li><a href="https://www.flaticon.com/br/icones-gratis/lista-de-controle" title="lista de controle ícones">Lista de controle ícones criados por Earthz Stocker - Flaticon</a></li>
+
+        <li><a href="https://www.flaticon.com/br/icones-gratis/circulo" title="círculo ícones">Círculo ícones criados por Afian Rochmah Afif - Flaticon</a></li>
     </ul>
 </body>
 </html>
