--- a/index.html
+++ b/index.html
@@ -19,6 +19,26 @@
 
     <main>
         <button id="adc">+ Nova Tarefa</button>
+
+        <ul>
+            <li>
+                <img src="ICONES/circulo.png" alt="circulo" id="circulo">
+                <h2>TÍTULO PRIMEIRA TAREFA</h2>
+                <p>Descrilção da tarefa</p>
+            </li>
+
+            <li>
+                <img src="ICONES/circulo.png" alt="circulo" id="circulo">
+                <h2>TÍTULO PRIMEIRA TAREFA</h2>
+                <p>Descrilção da tarefa</p>
+            </li>
+
+            <li>
+                <img src="ICONES/circulo.png" alt="circulo" id="circulo">
+                <h2>TÍTULO PRIMEIRA TAREFA</h2>
+                <p>Descrilção da tarefa</p>
+            </li>
+        </ul>
     </main>
 
     <footer>
