--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/header.css">
     <link rel="stylesheet" href="CSS/main.css">
+    <link rel="stylesheet" href="CSS/card.css">
     <title>Lista de Tarefas</title>
 </head>
 <body>
@@ -19,6 +20,22 @@
 
     <main>
         <button id="adc">+ Nova Tarefa</button>
+
+        <!--------------------CARD-------------------------->
+        <div id="bg_transparente">
+            <div id="container">
+                <h2>NOVA TAREFA</h2>
+                <form>
+                    <input type="text" placeholder="Título da tarefa"> <br>
+                    <input type="text" placeholder="Descrilção da tarefa">
+                </form>
+                <button type="submit" id="enviar">Enviar</button><br>
+                <button id="cancelar">Cancelar</button>
+            </div>
+        </div>
+        <!-------------------------------------------------->
+
+        <!---------------------LISTA------------------------>
 
         <ul>
             <li>
