--- a/index.html
+++ b/index.html
@@ -41,20 +41,21 @@
             <li>
                 <img src="ICONES/circulo.png" alt="circulo" id="circulo">
                 <h2>TÍTULO PRIMEIRA TAREFA</h2>
-                <p>Descrilção da tarefa</p>
+                <p>Descrição da tarefa</p>
             </li>
 
             <li>
                 <img src="ICONES/circulo.png" alt="circulo" id="circulo">
-                <h2>TÍTULO PRIMEIRA TAREFA</h2>
-                <p>Descrilção da tarefa</p>
+                <h2>ESTUDAR</h2>
+                <p>Estudar 1 hora de português</p>
             </li>
-
+            
             <li>
                 <img src="ICONES/circulo.png" alt="circulo" id="circulo">
-                <h2>TÍTULO PRIMEIRA TAREFA</h2>
-                <p>Descrilção da tarefa</p>
-            </li>
+                <h2>IR AO MERCADO</h2>
+                <p>Comprar: 5x pacores de feijão; 3x pacores de arroz; 1x pacote de açúcar;
+                </p>
+            </li> 
         </ul>
     </main>
 
